[package]
name = "libslirp"
version = "4.0.0"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
repository = "https://github.com/elmarco/libslirp-rs"
homepage = "https://github.com/elmarco/libslirp-rs"
documentation = "https://docs.rs/libslirp"
description = "High-level bindings for libslirp."
license = "MIT"
edition = "2018"

[dependencies]
libslirp-sys = "4.0.0"
# make it option features
structopt = "0.2.14"
mio = "0.6.16"
mio-extras = "2.0.5"
slab = "0.4.0"
libc = "0.2"

[dev-dependencies]
etherparse = "0.8.0"
tun-tap = "0.1.2"

[patch.crates-io]
libslirp-sys = { git = "https://github.com/elmarco/libslirp-sys" }
# FIXME: next mio release should have the POLLPRI fix
mio = { git = "https://github.com/carllerche/mio" }
